sample/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    app: Demo
